# Traitement_Image_M1_2022-2023

tp01/tp01/src/: tp1_exo2.cpp  tp1_exo3.cpp
tp01_correction/src/: tp1_exo2.cpp  tp1_exo3.cpp
tp02/tp02_src/src/: tp2_exo1.cpp  tp2_exo2.cpp  tp2_exo3.cpp  tp2_pick_color.cpp
tp02_correction/src/: tp2_exo1.cpp  tp2_exo2.cpp  tp2_exo3.cpp
tp03_correction/src/: tp3_exo1.cpp  tp3_exo2.cpp
tp04/tp_04_src/src/: tp4_exo1.cpp
tp05/tp05/src/: tp05_ex01.cpp
tp05_correction/: CMakeLists.txt
tp05_correction/src/: convolutions.cpp  fourier.cpp
tp06/tp06/src/: morpho.cpp
tp_04_src_correction/src/: tp4_exo1.cpp
